@startuml marley_uml

skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam defaultFontSize 11
skinparam classFontSize 12
skinparam packageFontSize 14
skinparam packageFontStyle bold
skinparam shadowing false
skinparam class {
  BorderColor #666666
  ArrowColor #444444
}

title MARley -- UML Class Diagram

package "marley.models" #FFF8E1 {
  class "AbstentionResult" as marley.models.abstention.AbstentionResult #FFE082 {
  abstained : bool
  answer : str
  confidence : float
  level : int | None
  model : str
  reason : str
  retrieval_results : list[dict]
}
  class "ExtractionResult" as marley.models.extraction.ExtractionResult #FFE082 {
  sections : list[Section]
  source_file : str
  total_pages : int
}
  class "GenerationResult" as marley.models.generation.GenerationResult #FFE082 {
  answer : str
  completion_tokens : int
  context_chunk_ids : list[str]
  model : str
  prompt_tokens : int
}
  class "Generator" as marley.models.generation.Generator #FFE082 {
  {abstract}
  class "QualityFlag" as marley.models.quality.QualityFlag #FFE082 {
  code : str
  context : dict
  message : str
  severity : str
}
  class "RetrievalResult" as marley.models.retrieval.RetrievalResult #FFE082 {
  chunk_id : str
  metadata : dict[str, Any]
  score : float
  text : str
}
  class "Retriever" as marley.models.retrieval.Retriever #FFE082 {
  size : int
  {abstract}
  class "Section" as marley.models.extraction.Section #FFE082 {
  end_page : int
  kind : str
  label : str
  parent_section_id : str | None
  section_id : str
  start_page : int
  tables : list[Table]
  text : str
  title : str
}
  class "Table" as marley.models.extraction.Table #FFE082 {
  headers : list[str]
  page : int
  rows : list[list[str]]
  table_id : str
}
}

package "marley.extractor" #E8F5E9 {
  class "_Marker" as marley.extractor.extractor._Marker #A5D6A7 {
  kind : str
  label : str
  line_index : int
  page : int
  title : str
}
}

package "marley.chunker" #E3F2FD {
  class "Chunk" as marley.chunker.pdf_chunker.Chunk #90CAF9 {
  chunk_id : str
  chunk_type : str
  metadata
  text : str
  token_count : int
}
  class "ChunkMetadata" as marley.chunker.pdf_chunker.ChunkMetadata #90CAF9 {
  chunk_index : int
  document_id : str
  end_page : int | None
  heading_path : list[str]
  parent_section_id : str | None
  section_id : str | None
  section_kind : str | None
  section_label : str | None
  section_title : str | None
  source_file : str
  start_page : int | None
  table_id : str | None
}
  class "ChunkingResult" as marley.chunker.pdf_chunker.ChunkingResult #90CAF9 {
  chunks : list[Chunk]
  quality_flags : list[QualityFlag]
  source_file : str
  stats
}
  class "ChunkingStats" as marley.chunker.pdf_chunker.ChunkingStats #90CAF9 {
  max_tokens : int
  median_tokens : int
  min_tokens : int
  sections_processed : int
  sections_skipped : int
  table_chunks : int
  tables_processed : int
  text_chunks : int
  total_chunks : int
  total_tokens : int
}
  class "FAQChunk" as marley.chunker.faq_chunker.FAQChunk #90CAF9 {
  chunk_id : str
  chunk_type : str
  metadata
  text : str
  token_count : int
}
  class "FAQChunkMetadata" as marley.chunker.faq_chunker.FAQChunkMetadata #90CAF9 {
  chunk_index : int
  faq_id : str
  faq_source : str
  source_file : str
  source_reference : str
}
  class "FAQChunkingResult" as marley.chunker.faq_chunker.FAQChunkingResult #90CAF9 {
  chunks : list[FAQChunk]
  faq_source : str
  quality_flags : list[QualityFlag]
  source_file : str
  stats
}
  class "FAQChunkingStats" as marley.chunker.faq_chunker.FAQChunkingStats #90CAF9 {
  entries_processed : int
  entries_skipped : int
  entries_total : int
  max_tokens : int
  median_tokens : int
  min_tokens : int
  total_chunks : int
  total_tokens : int
}
  class "FAQDataset" as marley.chunker.faq_chunker.FAQDataset #90CAF9 {
  entries : list[FAQEntry]
  faq_source : str
}
  class "FAQEntry" as marley.chunker.faq_chunker.FAQEntry #90CAF9 {
  answer : str
  id : str
  question : str
  source : str
}
}

package "marley.retrieval" #FFF3E0 {
  class "BM25Retriever" as marley.retrieval.bm25.BM25Retriever #FFCC80 {
  size : int
  index(corpus: list[dict]) -> None
  retrieve(query: str, k: int) -> list[RetrievalResult]
}
  class "FusionRetriever" as marley.retrieval.fusion.FusionRetriever #FFCC80 {
  size : int
  {abstract}
  class "HybridRetriever" as marley.retrieval.hybrid.HybridRetriever #FFCC80 {
  size : int
  index(corpus: list[dict]) -> None
  retrieve(query: str, k: int) -> list[RetrievalResult]
}
  class "VectorRetriever" as marley.retrieval.vector.VectorRetriever #FFCC80 {
  size : int
  index(corpus: list[dict]) -> None
  retrieve(query: str, k: int) -> list[RetrievalResult]
}
}

package "marley.generator" #F3E5F5 {
  class "OllamaGenerator" as marley.generator.ollama.OllamaGenerator #CE93D8 {
  model : str
  generate(query: str, context: list[dict]) -> GenerationResult
}
}

package "marley.server" #E0F7FA {
  class "ChatConfigInfo" as marley.server.models.ChatConfigInfo #80DEEA {
  k : int
  knowledge_bases : list[str]
  model : str
  normalization_strategy : str
  retriever_type : str
  strategy : str
  threshold : float
}
  class "ChatRequest" as marley.server.models.ChatRequest #80DEEA {
  k : Optional[int]
  knowledge_bases : Optional[list[str]]
  query : Optional[str]
  retriever_type : Optional[str]
  strategy : Optional[str]
  threshold : float | None
}
  class "ChatResponse" as marley.server.models.ChatResponse #80DEEA {
  abstained : bool
  abstention_level : int | None
  abstention_reason : str
  answer : str
  confidence : float
  config
  sources : list[SourceReference]
}
  class "HealthResponse" as marley.server.models.HealthResponse #80DEEA {
  cached_retrievers : int
  knowledge_bases : list[str]
  model : str
  ollama : str
  status : str
}
  class "OptionsResponse" as marley.server.models.OptionsResponse #80DEEA {
  defaults : dict
  knowledge_bases : list[str]
  ollama_model : str
  ollama_status : str
  retriever_types : list[str]
  strategies : list[str]
}
  class "PipelineService" as marley.server.service.PipelineService #80DEEA {
  cached_retriever_count : int
  generator_model : str
  available_knowledge_bases() -> list[str]
  chat(query: str) -> dict
  get_retriever(retriever_type: str, knowledge_bases: list[str], strategy: str, k_rrf: int) -> Retriever
}
  class "ServerConfig" as marley.server.config.ServerConfig #80DEEA {
  chunk_dir : Path
  default_knowledge_bases : list[str]
  default_retriever_type : str
  default_strategy : str
  evaluation_items_dir : str
  host : str
  k : int
  ollama_base_url : str
  ollama_model : str
  port : int
}
  class "SourceReference" as marley.server.models.SourceReference #80DEEA {
  chunk_id : str
  metadata : Optional[dict]
  score : float
  text : str
}
}

' ── Relationships ──
marley.generator.ollama.OllamaGenerator --|> marley.models.generation.Generator
marley.retrieval.bm25.BM25Retriever --|> marley.models.retrieval.Retriever
marley.retrieval.fusion.FusionRetriever --|> marley.models.retrieval.Retriever
marley.retrieval.hybrid.HybridRetriever --|> marley.models.retrieval.Retriever
marley.retrieval.vector.VectorRetriever --|> marley.models.retrieval.Retriever
marley.chunker.faq_chunker.FAQChunk --> marley.chunker.faq_chunker.FAQChunkMetadata : metadata
marley.chunker.faq_chunker.FAQChunkingResult --> marley.chunker.faq_chunker.FAQChunkingStats : stats
marley.chunker.pdf_chunker.Chunk --> marley.chunker.pdf_chunker.ChunkMetadata : metadata
marley.chunker.pdf_chunker.ChunkingResult --> marley.chunker.pdf_chunker.ChunkingStats : stats
marley.server.models.ChatResponse --> marley.server.models.ChatConfigInfo : config

@enduml